removed sass causing spacing issues regarding bullet point headers

--- a/crt_portal/static/sass/custom/landing.scss
+++ b/crt_portal/static/sass/custom/landing.scss
@@ -20,9 +20,6 @@ $arrow-height: 24px;
   h2 {
     margin-top: 0;
     margin-bottom: 0;
-    @include at-media(tablet) {
-      margin-top: 1.5rem;
-    }
   }
 
   li {
